# hr-api

./: LICENSE  README.md  main.py  pyproject.toml  si_parsing.py
hr_api/: database.py  models.py
